2nd push of portfolio project

--- a/index.html
+++ b/index.html
@@ -36,12 +36,19 @@
             <a href="#" class="btn">Let's Talk :)</a>
         </div>
         </div>
+        <div class="home-sci">
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+
+
      </section>
 
 
 
 
-
+ <script src="https://kit.fontawesome.com/0ef8f89616.js" crossorigin="anonymous"></script>
 <script src="script.js"></script>    
 </body>
 </html>
