--- a/index.html
+++ b/index.html
@@ -42,9 +42,31 @@
             <a href="#"><i class="fa-brands fa-linkedin"></i></a>
         </div>
 
+      <div class="home-imgHover"></div> 
+
 
      </section>
 
+     <!--About Section Design -->
+     <section class="about" id="about">
+        <h2 class="heading">About <span>Me</span></h2>
+
+        <div class="about-img">
+            <img src="zenitsu_bg.png" alt="">
+            <span class="circle-spin"></span>
+        </div>
+
+        <div class="about-content">
+            <h3>Noov Developer </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse nesciunt, numquam pariatur dolores beatae dolor aliquid quasi repellendus ipsum illo ratione minus nisi sequi facilis recusandae eligendi quis temporibus soluta!</p>
+        <div class="btn-box btns">
+            <a href="#" class="btn">Read More</a>
+        </div>
+        
+        </div>
+
+
+     </section>
 
 
 
