--- a/index.html
+++ b/index.html
@@ -134,13 +134,80 @@
 
         </div>
     </div> 
-
-
-
-
    </div>
 
     </section>
+
+    <!--Skills Section design -->
+    <section class="skills" id="skills">
+
+     <h2 class="heading">My <span>Skills </span></h2>
+     <div class="skills-row">
+        <div class="skills-column">
+            <h3 class="title">Coding Skills</h3>
+            <div class="skills-box">
+                <div class="skills-content">
+
+                    <div class="progress">
+                        <h3>HTML <span>90%</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
+                       <div class="progress">
+                        <h3>CSS <span>80%</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
+                       <div class="progress">
+                        <h3>JavaScript<span>60%</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
+                       <div class="progress">
+                        <h3>C++<span>80%</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+        
+
+                <div class="skills-column">
+            <h3 class="title">Professional Skills</h3>
+            <div class="skills-box">
+                <div class="skills-content">
+
+                    <div class="progress">
+                        <h3>Web Design <span>40%</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
+                       <div class="progress">
+                        <h3>Web Development<span>45%</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
+                       <div class="progress">
+                        <h3>Graphic Design <span>0%</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
+                       <div class="progress">
+                        <h3>SEO Marketing<span>0%</span></h3>
+                        <div class="bar"><span></span></div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+     </div>
+
+    </section>
+
 
 
 
