contact and footer section designed

--- a/index.html
+++ b/index.html
@@ -209,6 +209,61 @@
     </section>
 
 
+    <!-- Contact Section Design -->
+  <section class="contact" id="contact">
+    <h2 class="heading">Contact <span>Me!</span></h2>
+    <form action="#">
+        <div class="input-box">
+            <div class="input-field">
+              <input type="text" placeholder="Full Name" required>
+              <span class="focus"></span>
+            </div>
+        
+               <div class="input-field">
+              <input type="text" placeholder="Email Address" required>
+              <span class="focus"></span>
+            </div>
+
+        </div>
+
+        <div class="input-box">
+            
+              <div class="input-field">
+              <input type="text" placeholder="Mobile Number" required>
+              <span class="focus"></span>
+            </div>
+               <div class="input-field">
+              <input type="text" placeholder="Email Subject" required>
+              <span class="focus"></span>
+            </div>
+
+        </div>
+            <div class="textarea-field">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
+              <span class="focus"></span>
+            </div>
+            <div class="btn-box btns">
+                <button type="submit" class="btn">Submit</button>
+            </div>
+
+
+    </form>
+
+  </section>    
+  
+
+<!-- Footer Design -->
+ <footer class="footer">
+    <div class="footer-text">
+        <p>Copyright &copy; 2023 by RS | All Rights Reserved</p>
+    </div>
+    <div class="footer-iconTop">
+        <a href="#"><i class="fa-solid fa-up-long"></i></a>
+    </div>
+ </footer>
+
+  
+
 
 
 
