working on home content animations

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <a href="#education">Education</a>
             <a href="#skills">Skills</a>
             <a href="#contact">Contact me </a>
+
+            <span class="active-nav"></span>
         </nav>
     </header>
 
@@ -28,7 +30,7 @@
         <div class="home-content">
             <h1>Hey <span>I'm Rahul Sheikh</span></h1>
             <div class="text-animate">
-                <h3>Noob Developer</h3>
+                <h3>Frontend Developer</h3>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis alias cum rem nemo architecto sed deserunt maxime amet molestiae mollitia necessitatibus quasi, quaerat illo reiciendis tempore perferendis error possimus deleniti!</p>
         <div class="btn-box">
